<resources>
    <string name="app_name">RoomMe</string>
    <string name="title_activity_buy">BuyActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_firstname">First Name</string>
    <string name="login_lastname">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="sex">Sex</string>
    <string name="login_male">Male</string>
    <string name="login_female">Female</string>
    <string-array name="sex_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="marital_status_list">
        <item>Married</item>
        <item>Single</item>
    </string-array>
    <string name="login_btn">SIGN IN</string>
    <string name="register_btn">CREATE NEW ACCOUNT</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="buy">Buy</string>
    <string name="buy_contracts">Buy Contracts</string>
    <string name="sell_contracts">Sell Contracts</string>
    <string name="price_label">Price</string>
    <string name="price_per_month_label">Price/mo.</string>
    <string name="additional_info">Additional Info</string>
    <string name="add_image">+ add image</string>
    <string name="display_price">$%d</string>
    <string name="money_sign">$</string>
    <string name="sell">Sell</string>
    <string name="favorite">Favorites</string>
    <string name="date_field">Date Field</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="filter_action">sort/filter</string>
    <string name="new_contract">New Contract</string>
    <string name="apartment_name">Apartment Name</string>
    <string name="apartment_number">Apt #</string>
    <string name="sell_by">Sell By</string>
    <string name="date_available">Date Available</string>
    <string name="available_by">Contract Available By</string>
    <string name="address">Address</string>
    <string name="address_2">Address 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postal_code">Postal</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="ok">OK</string>
    <string name="save_btn">SAVE</string>
    <string name="delete_btn">DELETE</string>
    <string name="clear">CLEAR</string>
    <string name="apply">APPLY</string>
    <string name="marital_status">Marital Status</string>
    <string name="single">Single</string>
    <string name="married">Married</string>
    <string name="or">OR</string>
    <string name="to">to</string>
    <string name="search_title">Search</string>
    <string name="price_low">Price Low</string>
    <string name="price_high">Price High</string>
    <string name="EXTRA_USERNAME">username</string>
    <string name="EXTRA_PASSWORD">password</string>
    <string name="EXTRA_FIRSTNAME">firstname</string>
    <string name="EXTRA_LASTNAME">lastname</string>
    <string name="TAG_login">login</string>
    <string name="TAG_register">register</string>
    <string name="TAG_buy">buy</string>
    <string name="TAG_sell">sell</string>
    <string name="TAG_datedialog">datedialog</string>
    <string name="TAG_filter">filter</string>
    <string name="TAG_main_frag">MainFragment</string>
    <string name="TAG_new_contract">NewContract</string>
    <string name="TAG_currentfrag">current</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_failed">Login Failed</string>
    <string name="title_activity_forgot_password">Forgot Password</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Reset Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
