<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/new_contract_container">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/apartment_name_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
        style="@style/AppTheme.EditTextLabel">

        <EditText
            style="@style/AppTheme.EditText"
            android:id="@+id/apartment_name"
            android:inputType="text"
            android:hint="@string/apartment_name"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/apartment_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/apartment_number_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
            android:layout_marginEnd="15dp"
            style="@style/AppTheme.EditTextLabel">

            <EditText
                style="@style/AppTheme.EditText"
                android:id="@+id/apartment_number"
                android:inputType="number"
                android:hint="@string/apartment_number"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sell_by_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
            android:layout_marginStart="5dp"
            style="@style/AppTheme.EditTextLabel">

            <EditText
                android:id="@+id/sell_by"
                android:inputType="date"
                android:hint="@string/sell_by"
                style="@style/AppTheme.EditText" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>