<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/background">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.derds.tickettoride.login.LoginFragment"
        android:id="@+id/fragment_register">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="8dp"
            style="AppTheme.Login.TitleContainer" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.Title"/>

        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/first_name_label"
            app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/AppTheme.EditTextLabel">

            <EditText
                style="@style/AppTheme.EditText"
                android:id="@+id/first_name"
                android:inputType="text"
                android:hint="@string/login_firstname"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/last_name_label"
            app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
            app:layout_constraintTop_toBottomOf="@id/first_name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/AppTheme.EditTextLabel">

            <EditText
                style="@style/AppTheme.EditText"
                android:id="@+id/last_name"
                android:inputType="text"
                android:hint="@string/login_lastname" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_label"
            app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
            app:layout_constraintTop_toBottomOf="@id/last_name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/AppTheme.EditTextLabel">

            <EditText
                style="@style/AppTheme.EditText"
                android:id="@+id/username"
                android:inputType="text"
                android:hint="@string/login_username"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_label"
            app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
            app:layout_constraintTop_toBottomOf="@id/username_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/AppTheme.EditTextLabel">

            <EditText
                style="@style/AppTheme.EditText"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:hint="@string/login_password" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/select_sex_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="35dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/male_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_male"
                style="@style/toggleButtonLeft" />

            <View style="@style/toggleButton.separator" />

            <Button
                android:id="@+id/female_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_female"
                style="@style/toggleButtonRight" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_btn_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/select_sex_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <Button
                style="@style/AppTheme.PrimaryButton"
                android:text="@string/register_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/register_btn"/>

        </LinearLayout>

        <!--RelativeLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/login_btn_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="8dp">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:progressDrawable="@drawable/circle_progress_bar"
                android:layout_centerHorizontal="true"
                android:theme="@style/SwitchTheme"
                android:visibility="gone" />

        </RelativeLayout-->

    </android.support.constraint.ConstraintLayout>

</ScrollView>