<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_login">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="8dp"
            style="AppTheme.Login.TitleContainer" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.Title"/>

        </LinearLayout>

        <GridLayout
            android:id="@+id/login_grid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_label"
                android:layout_row="1"
                app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
                style="@style/AppTheme.EditTextLabel"
                android:inputType="textEmailAddress" >

                <EditText
                    style="@style/AppTheme.EditText"
                    android:id="@+id/email"
                    android:inputType="text"
                    android:hint="@string/login_email"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_label"
                android:layout_row="2"
                app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
                style="@style/AppTheme.EditTextLabel">

                <EditText
                    android:id="@+id/password"
                    style="@style/AppTheme.EditText"
                    android:hint="@string/login_password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

        </GridLayout>

        <RelativeLayout
            android:id="@+id/login_btn_layout"
            android:layout_width="351dp"
            android:layout_height="275dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/login_grid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="29dp"
            android:layout_marginTop="-33dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.757">


            <Button
                android:id="@+id/register"
                style="@style/AppTheme.SecondaryButton"
                android:layout_width="190dp"
                android:text="@string/register_btn"
                android:textSize="12sp"
                android:layout_alignTop="@+id/login_btn"
                android:layout_marginTop="48dp"
                />


            <View
                android:layout_width="130dp"
                android:layout_height="1dp"
                android:layout_marginTop="150dp"
                android:background="@android:color/darker_gray"
                android:id="@+id/view" />
            <View
                android:layout_width="130dp"
                android:layout_height="1dp"
                android:layout_marginTop="150dp"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="180dp"
                android:id="@+id/view2" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register"
                android:layout_centerVertical="true"
                android:layout_marginTop="49dp"
                android:layout_marginLeft="60dp"/>


            <Button
                android:id="@+id/login_btn"
                style="@style/AppTheme.PrimaryButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="16dp"
                android:text="@string/login_btn"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                android:layout_marginTop="140dp"
                android:layout_marginLeft="145dp"/>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sign_in_button"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="14dp"
                android:text="Forgot Password?"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />


        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>